<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="187dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/cat"
        android:contentDescription="@string/image_cat"
        android:onClick="onClick"
        android:src="@drawable/kitty"
        app:layout_constraintBottom_toTopOf="@+id/third_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        tools:srcCompat="@drawable/kitty" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="160dp"
        android:text="@string/textview"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display2"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/third_button"
        app:layout_constraintTop_toBottomOf="@+id/third_button" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:layout_marginBottom="64dp"
        android:ems="10"
        android:hint="@string/input_Name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/name_catt"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/third_button"
        android:layout_width="142dp"
        android:layout_height="61dp"
        android:layout_marginBottom="98dp"
        android:text="@string/third"
        android:onClick="onClick1"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

</androidx.constraintlayout.widget.ConstraintLayout>